# 3dbag-docs

./: .gitignore  404.html  AUTHORS  CC BY 4.0.xmp  CNAME  Makefile  NOTICE  README.md  dev-deploy.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  style_guide.txt
.github/workflows/: main.yml
about/: index.html
config/en/: mkdocs.yml
config/nl/: mkdocs.yml
docs/: about.md  attributes.json  index.md  layers.json  terms.md
docs/en/: about.md  contact.md  copyright.md  index.md  terms.md
docs/en/delivery/: cityjson.md  fgb.md  gpkg.md  ifc.md  obj.md  postgresql.md  webservices.md
docs/en/overview/: group.md  release_notes.md  sources.md
docs/en/schema/: attributes.md  concepts.md  layers.md
docs/en/stylesheets/: extra.css
docs/nl/: contact.md  copyright.md  index.md
docs/nl/delivery/: cityjson.md  fgb.md  gpkg.md  ifc.md  obj.md  postgresql.md  webservices.md
docs/nl/overview/: group.md  media.md  release_notes.md  sources.md
en/: 404.html  index.html  sitemap.xml
en/attributes/: index.html
en/changelog/: index.html
en/contact/: index.html
en/copyright/: index.html
en/search/: search_index.json
en/terms/: index.html
includes/: index.html  media.md  release_notes.md
nl/: 404.html  index.html  sitemap.xml
nl/contact/: index.html
nl/copyright/: index.html
nl/search/: search_index.json
nl/stylesheets/: extra.css
nl/terms/: index.html
overrides/: main.html
overrides/partials/: header.html  logo.html
scripts/: build.sh  g.py  generate_attribute_doc.py  generate_layers_docs.py
search/: search_index.json
(+29 files in other folders)
